--- a/package.json
+++ b/package.json
@@ -2,24 +2,29 @@
   "name": "calendar",
   "version": "0.0.1",
   "description": "Calendar view of your daily notes",
-  "main": "dist/index.js",
+  "author": "liamcain",
+  "main": "dist/calendar.js",
+  "license": "MIT",
+  "scripts": {
+    "build": "svelte-check && rollup -c"
+  },
   "dependencies": {
+    "@rollup/plugin-commonjs": "^15.0.0",
+    "@rollup/plugin-node-resolve": "^9.0.0",
     "clsx": "^1.1.1",
     "core-js": "^3.6.5",
-    "handlebars": "^4.7.6",
     "moment": "^2.27.0",
-    "obsidian-shared-utils": "file:../../shared",
-    "typescript": "^4.0.2"
+    "rollup": "^2.26.7",
+    "rollup-plugin-svelte": "^6.0.0",
+    "svelte": "^3.24.1",
+    "tslib": "^2.0.1"
   },
   "devDependencies": {
     "@types/node": "^14.6.2",
-    "nodemon": "^2.0.4",
-    "parcel-bundler": "^1.12.4"
-  },
-  "scripts": {
-    "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "liamcain",
-  "license": "MIT"
+    "@rollup/plugin-typescript": "^5.0.2",
+    "@tsconfig/svelte": "^1.0.10",
+    "svelte-check": "^1.0.31",
+    "svelte-preprocess": "^4.2.0",
+    "typescript": "^4.0.2"
+  }
 }
