--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,6 @@
 {
-  "compilerOptions": {
-    "allowSyntheticDefaultImports": true,
-    "module": "commonjs",
-    "moduleResolution": "node",
-    // "noImplicitAny": true,
-    "removeComments": true,
-    "outDir": "./dist",
-    "preserveConstEnums": true,
-    "sourceMap": true,
-    "target": "ES2015"
-  },
+  "extends": "@tsconfig/svelte/tsconfig.json",
+
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "**/*.spec.ts"]
+  "exclude": ["node_modules/*"]
 }
