--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,5 +2,8 @@
   "extends": "@tsconfig/svelte/tsconfig.json",
 
   "include": ["src/**/*"],
-  "exclude": ["node_modules/*"]
+  "exclude": ["node_modules/*"],
+  "compilerOptions": {
+    "types": ["node", "svelte"]
+  }
 }
