Update plugin to support obsidian v0.9.8

--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,5 @@
   "id": "calendar",
   "name": "Calendar",
   "description": "Calendar view of your daily notes",
-  "isDesktopOnly": false,
-  "js": "dist/calendar.js"
+  "isDesktopOnly": false
 }
