--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "Calendar view of your daily notes",
   "author": "liamcain",
-  "main": "dist/calendar.js",
+  "main": "main.js",
   "license": "MIT",
   "scripts": {
     "build": "svelte-check && rollup -c"
