--- a/manifest.json
+++ b/manifest.json
@@ -2,5 +2,8 @@
   "id": "calendar",
   "name": "Calendar",
   "description": "Calendar view of your daily notes",
+  "version": "1.0.1",
+  "author": "Liam Cain",
+  "authorUrl": "https://github.com/liamcain/",
   "isDesktopOnly": false
 }
