--- a/package.json
+++ b/package.json
@@ -10,12 +10,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@types/lodash": "^4.14.164",
-    "@types/node": "14.14.3",
     "clsx": "1.1.1",
     "core-js": "3.6.5",
-    "lodash": "4.17.20",
-    "moment": "2.29.1",
     "obsidian": "obsidianmd/obsidian-api#master",
     "svelte": "3.24.1",
     "tslib": "2.0.1"
@@ -29,6 +25,8 @@
     "rollup-plugin-svelte": "^6.0.0",
     "svelte-check": "^1.0.31",
     "svelte-preprocess": "^4.2.0",
-    "typescript": "^4.0.2"
+    "typescript": "^4.0.2",
+    "@types/lodash": "^4.14.164",
+    "@types/node": "14.14.3"
   }
 }
