--- a/package.json
+++ b/package.json
@@ -6,27 +6,25 @@
   "main": "main.js",
   "license": "MIT",
   "scripts": {
-    "build": "svelte-check && rollup -c",
-    "lint": "eslint ."
+    "build": "svelte-check && rollup -c"
   },
   "dependencies": {
     "clsx": "1.1.1",
     "core-js": "3.6.5",
     "obsidian": "obsidianmd/obsidian-api#master",
-    "svelte": "3.24.1",
-    "tslib": "2.0.1"
+    "svelte": "3.29.4",
+    "tslib": "2.0.3"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^15.0.0",
-    "@rollup/plugin-node-resolve": "^9.0.0",
-    "@rollup/plugin-typescript": "^5.0.2",
-    "@tsconfig/svelte": "^1.0.10",
-    "rollup": "^2.26.7",
-    "rollup-plugin-svelte": "^6.0.0",
-    "svelte-check": "^1.0.31",
-    "svelte-preprocess": "^4.2.0",
-    "typescript": "^4.0.2",
-    "@types/lodash": "^4.14.164",
-    "@types/node": "14.14.3"
+    "@rollup/plugin-commonjs": "16.0.0",
+    "@rollup/plugin-node-resolve": "10.0.0",
+    "@rollup/plugin-typescript": "5.0.2",
+    "@tsconfig/svelte": "1.0.10",
+    "rollup": "2.32.1",
+    "rollup-plugin-svelte": "6.1.0",
+    "svelte-check": "1.1.6",
+    "svelte-preprocess": "4.5.2",
+    "typescript": "4.0.5",
+    "@types/node": "14.14.6"
   }
 }
