--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "@rollup/plugin-node-resolve": "10.0.0",
     "@rollup/plugin-typescript": "5.0.2",
     "@tsconfig/svelte": "1.0.10",
+    "@types/node": "14.14.6",
     "rollup": "2.32.1",
     "rollup-plugin-svelte": "6.1.0",
     "svelte-check": "1.1.6",
     "svelte-preprocess": "4.5.2",
-    "typescript": "4.0.5",
-    "@types/node": "14.14.6"
+    "typescript": "4.0.5"
   }
 }
