--- a/package.json
+++ b/package.json
@@ -6,11 +6,10 @@
   "main": "main.js",
   "license": "MIT",
   "scripts": {
-    "build": "svelte-check && rollup -c"
+    "lint": "svelte-check && eslint . --ext .ts",
+    "build": "npm run lint && rollup -c"
   },
   "dependencies": {
-    "clsx": "1.1.1",
-    "core-js": "3.6.5",
     "obsidian": "obsidianmd/obsidian-api#master",
     "svelte": "3.29.4",
     "tslib": "2.0.3"
@@ -20,11 +19,15 @@
     "@rollup/plugin-node-resolve": "10.0.0",
     "@rollup/plugin-typescript": "5.0.2",
     "@tsconfig/svelte": "1.0.10",
+    "@types/moment": "^2.13.0",
     "@types/node": "14.14.6",
-    "rollup": "2.32.1",
+    "@typescript-eslint/eslint-plugin": "^4.8.1",
+    "@typescript-eslint/parser": "^4.8.1",
+    "eslint": "^7.13.0",
+    "rollup": "2.33.3",
     "rollup-plugin-svelte": "6.1.0",
     "svelte-check": "1.1.6",
     "svelte-preprocess": "4.5.2",
-    "typescript": "4.0.5"
+    "typescript": "^4.0.5"
   }
 }
