--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,10 @@
   "include": ["src/**/*"],
   "exclude": ["node_modules/*"],
   "compilerOptions": {
-    "types": ["node", "svelte"]
+    "types": ["node", "svelte"],
+    "baseUrl": ".",
+    "paths": {
+      "src": ["src/*"]
+    }
   }
 }
