--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "build": "npm run lint && rollup -c"
   },
   "dependencies": {
+    "@types/moment": "^2.13.0",
     "obsidian": "obsidianmd/obsidian-api#master",
+    "obsidian-daily-notes-interface": "0.1.0",
     "svelte": "3.29.7",
     "tslib": "2.0.3"
   },
@@ -19,7 +21,6 @@
     "@rollup/plugin-node-resolve": "10.0.0",
     "@rollup/plugin-typescript": "6.1.0",
     "@tsconfig/svelte": "1.0.10",
-    "@types/moment": "2.13.0",
     "@types/node": "14.14.8",
     "@typescript-eslint/eslint-plugin": "4.8.1",
     "@typescript-eslint/parser": "4.8.1",
