--- a/package.json
+++ b/package.json
@@ -1,34 +1,65 @@
 {
   "name": "calendar",
-  "version": "1.3.1",
+  "version": "1.3.2",
   "description": "Calendar view of your daily notes",
   "author": "liamcain",
   "main": "main.js",
   "license": "MIT",
   "scripts": {
     "lint": "svelte-check && eslint . --ext .ts",
-    "build": "npm run lint && rollup -c"
+    "build": "npm run lint && rollup -c",
+    "test": "jest",
+    "test:watch": "yarn test -- --watch"
   },
   "dependencies": {
-    "@types/moment": "^2.13.0",
     "obsidian": "obsidianmd/obsidian-api#master",
-    "obsidian-daily-notes-interface": "0.1.0",
+    "obsidian-daily-notes-interface": "0.1.3",
     "svelte": "3.29.7",
     "tslib": "2.0.3"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.12.7",
     "@rollup/plugin-commonjs": "16.0.0",
     "@rollup/plugin-node-resolve": "10.0.0",
     "@rollup/plugin-typescript": "6.1.0",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/svelte": "^3.0.0",
     "@tsconfig/svelte": "1.0.10",
+    "@types/jest": "^26.0.15",
+    "@types/moment": "2.13.0",
     "@types/node": "14.14.8",
     "@typescript-eslint/eslint-plugin": "4.8.1",
     "@typescript-eslint/parser": "4.8.1",
+    "babel-jest": "^26.6.3",
     "eslint": "7.13.0",
+    "jest": "^26.6.3",
+    "moment": "^2.29.1",
     "rollup": "2.33.3",
     "rollup-plugin-svelte": "6.1.1",
     "svelte-check": "1.1.14",
+    "svelte-jester": "^1.1.5",
     "svelte-preprocess": "4.6.0",
+    "ts-jest": "^26.4.4",
     "typescript": "4.0.5"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "src/(.*)": "<rootDir>/src/$1"
+    },
+    "transform": {
+      "^.+\\.svelte$": [
+        "svelte-jester",
+        {
+          "preprocess": true
+        }
+      ],
+      "^.+\\.ts$": "ts-jest",
+      "^.+\\.js$": "babel-jest"
+    },
+    "moduleFileExtensions": [
+      "js",
+      "ts",
+      "svelte"
+    ]
   }
 }
