--- a/package.json
+++ b/package.json
@@ -13,32 +13,32 @@
   },
   "dependencies": {
     "obsidian": "obsidianmd/obsidian-api#master",
-    "obsidian-daily-notes-interface": "0.2.2",
-    "svelte": "3.29.7",
+    "obsidian-daily-notes-interface": "0.3.0",
+    "svelte": "3.31.0",
     "tslib": "2.0.3"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "16.0.0",
-    "@rollup/plugin-node-resolve": "10.0.0",
-    "@rollup/plugin-typescript": "6.1.0",
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/svelte": "^3.0.0",
+    "@rollup/plugin-commonjs": "17.0.0",
+    "@rollup/plugin-node-resolve": "11.0.0",
+    "@rollup/plugin-typescript": "8.0.0",
+    "@testing-library/jest-dom": "5.11.6",
+    "@testing-library/svelte": "3.0.0",
     "@tsconfig/svelte": "1.0.10",
-    "@types/jest": "^26.0.15",
+    "@types/jest": "26.0.19",
     "@types/moment": "2.13.0",
-    "@types/node": "14.14.8",
-    "@typescript-eslint/eslint-plugin": "4.8.1",
-    "@typescript-eslint/parser": "4.8.1",
-    "eslint": "7.13.0",
-    "jest": "^26.6.3",
-    "moment": "^2.29.1",
-    "rollup": "2.33.3",
-    "rollup-plugin-svelte": "6.1.1",
-    "svelte-check": "1.1.14",
-    "svelte-jester": "^1.1.5",
-    "svelte-preprocess": "4.6.0",
-    "ts-jest": "^26.4.4",
-    "typescript": "4.0.5"
+    "@types/node": "14.14.13",
+    "@typescript-eslint/eslint-plugin": "4.9.1",
+    "@typescript-eslint/parser": "4.9.1",
+    "eslint": "7.15.0",
+    "jest": "26.6.3",
+    "moment": "2.29.1",
+    "rollup": "2.34.2",
+    "rollup-plugin-svelte": "7.0.0",
+    "svelte-check": "1.1.22",
+    "svelte-jester": "1.3.0",
+    "svelte-preprocess": "4.6.1",
+    "ts-jest": "26.4.4",
+    "typescript": "4.1.3"
   },
   "jest": {
     "moduleNameMapper": {
