--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "dependencies": {
     "obsidian": "obsidianmd/obsidian-api#master",
-    "obsidian-daily-notes-interface": "0.3.1",
+    "obsidian-calendar-ui": "0.0.2",
+    "obsidian-daily-notes-interface": "0.4.0",
     "svelte": "3.31.0",
     "tslib": "2.0.3"
   },
