tmp: try using new package

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "obsidian": "obsidianmd/obsidian-api#master",
+    "obsidian-calendar-ui": "liamcain/obsidian-calendar-ui",
     "obsidian-daily-notes-interface": "0.4.0",
     "svelte": "3.31.0",
     "tslib": "2.0.3"
