--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "obsidian": "obsidianmd/obsidian-api#master",
-    "obsidian-calendar-ui": "0.0.2",
+    "obsidian-calendar-ui": "../obsidian-calendar-ui",
     "obsidian-daily-notes-interface": "0.4.0",
     "svelte": "3.31.0",
     "tslib": "2.0.3"
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "17.0.0",
     "@rollup/plugin-node-resolve": "11.0.0",
+    "@rollup/plugin-replace": "^2.3.4",
     "@rollup/plugin-typescript": "8.0.0",
     "@testing-library/jest-dom": "5.11.6",
     "@testing-library/svelte": "3.0.0",
