--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,9 @@
 name: CI
 on:
+  push:
+    branches: [$default-branch]
   pull_request:
-    branches:
-      - main
+    branches: [$default-branch]
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -10,5 +11,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install modules
         run: yarn
+      - name: Lint
+        run: yarn lint
       - name: Run tests
         run: yarn test
