--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,17 +1,28 @@
 name: CI
+
 on:
   push:
     branches: [$default-branch]
   pull_request:
     branches: [$default-branch]
+
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v2
+
+      - name: Use Node.js 14.x
+        uses: actions/setup-node@v1
+        with:
+          node-version: 14.x
+
       - name: Install modules
         run: yarn
+
       - name: Lint
         run: yarn lint
+
       - name: Run tests
         run: yarn test
