UI improvements to direct users to download Periodic Notes

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "obsidian": "obsidianmd/obsidian-api#master",
     "obsidian-calendar-ui": "../obsidian-calendar-ui",
-    "obsidian-daily-notes-interface": "../obsidian-daily-notes-interface",
+    "obsidian-daily-notes-interface": "0.7.0",
     "svelte": "3.31.0",
     "tslib": "2.0.3"
   },
