--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
-  "id": "calendar",
-  "name": "Calendar",
+  "id": "calendar-beta",
+  "name": "Calendar (Beta)",
   "description": "Calendar view of your daily notes",
-  "version": "1.5.3",
+  "version": "2.0.0",
   "author": "Liam Cain",
   "authorUrl": "https://github.com/liamcain/",
   "isDesktopOnly": false,
