--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "obsidian": "obsidianmd/obsidian-api#master",
     "obsidian-calendar-ui": "../obsidian-calendar-ui",
     "obsidian-daily-notes-interface": "0.7.3",
-    "svelte": "3.32.3",
+    "svelte": "3.35.0",
     "tslib": "2.1.0"
   },
   "devDependencies": {
@@ -23,7 +23,6 @@
     "@rollup/plugin-node-resolve": "11.1.1",
     "@rollup/plugin-typescript": "8.1.1",
     "@testing-library/jest-dom": "5.11.9",
-    "@testing-library/svelte": "3.0.3",
     "@tsconfig/svelte": "1.0.10",
     "@types/jest": "26.0.20",
     "@types/moment": "2.13.0",
@@ -36,6 +35,7 @@
     "rollup": "2.38.5",
     "rollup-plugin-svelte": "7.1.0",
     "svelte-check": "1.1.34",
+    "svelte-dnd-action": "liamcain/svelte-dnd-action",
     "svelte-jester": "1.3.0",
     "svelte-preprocess": "4.6.8",
     "ts-jest": "26.5.1",
@@ -59,5 +59,8 @@
       "ts",
       "svelte"
     ]
+  },
+  "resolutions": {
+    "svelte": "3.35.0"
   }
 }
