--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "rollup": "2.38.5",
     "rollup-plugin-svelte": "7.1.0",
     "svelte-check": "1.1.34",
-    "svelte-dnd-action": "liamcain/svelte-dnd-action",
+    "svelte-dnd-action": "0.9.1",
     "svelte-jester": "1.3.0",
     "svelte-preprocess": "4.6.8",
     "ts-jest": "26.5.1",
