--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "test:watch": "yarn test -- --watch"
   },
   "dependencies": {
+    "@popperjs/svelte": "0.1.1",
+    "color": "3.1.3",
     "obsidian": "obsidianmd/obsidian-api#master",
     "obsidian-calendar-ui": "../obsidian-calendar-ui",
     "obsidian-daily-notes-interface": "0.9.0",
@@ -36,7 +38,7 @@
     "rollup": "2.38.5",
     "rollup-plugin-svelte": "7.1.0",
     "svelte-check": "1.1.34",
-    "svelte-dnd-action": "0.9.1",
+    "svelte-dnd-action": "0.9.2",
     "svelte-jester": "1.3.0",
     "svelte-preprocess": "4.6.8",
     "ts-jest": "26.5.1",
