--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "svelte-check && eslint . --ext .ts",
     "build": "npm run lint && rollup -c",
     "build:nolint": "rollup -c",
-    "test": "jest --passWithNoTests",
     "test:watch": "yarn test -- --watch"
   },
   "dependencies": {
@@ -18,50 +17,28 @@
     "obsidian": "obsidianmd/obsidian-api#master",
     "obsidian-calendar-ui": "../obsidian-calendar-ui",
     "obsidian-daily-notes-interface": "0.9.0",
+    "semver": "^7.3.5",
     "svelte": "3.35.0",
     "tslib": "2.1.0"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "17.1.0",
     "@rollup/plugin-node-resolve": "11.1.1",
+    "@rollup/plugin-replace": "2.4.2",
     "@rollup/plugin-typescript": "8.1.1",
-    "@testing-library/jest-dom": "5.11.9",
     "@tsconfig/svelte": "1.0.10",
-    "@types/jest": "26.0.20",
     "@types/moment": "2.13.0",
-    "@types/node": "14.14.25",
+    "@types/semver": "^7.3.4",
     "@typescript-eslint/eslint-plugin": "4.15.0",
     "@typescript-eslint/parser": "4.15.0",
     "eslint": "7.19.0",
-    "jest": "26.6.3",
     "moment": "2.29.1",
     "rollup": "2.38.5",
     "rollup-plugin-svelte": "7.1.0",
-    "svelte-check": "1.1.34",
-    "svelte-dnd-action": "0.9.2",
-    "svelte-jester": "1.3.0",
+    "svelte-check": "1.4.0",
+    "svelte-dnd-action": "0.9.4",
     "svelte-preprocess": "4.6.8",
-    "ts-jest": "26.5.1",
     "typescript": "4.1.5"
-  },
-  "jest": {
-    "moduleNameMapper": {
-      "src/(.*)": "<rootDir>/src/$1"
-    },
-    "transform": {
-      "^.+\\.svelte$": [
-        "svelte-jester",
-        {
-          "preprocess": true
-        }
-      ],
-      "^.+\\.ts$": "ts-jest"
-    },
-    "moduleFileExtensions": [
-      "js",
-      "ts",
-      "svelte"
-    ]
   },
   "resolutions": {
     "svelte": "3.35.0"
