--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "@tsconfig/svelte/tsconfig.json",
 
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "popper.d.ts"],
   "exclude": ["node_modules/*"],
   "compilerOptions": {
     "types": ["node", "svelte"],
