--- a/package.json
+++ b/package.json
@@ -13,34 +13,33 @@
   },
   "dependencies": {
     "@popperjs/svelte": "0.1.1",
-    "color": "3.1.3",
     "obsidian": "obsidianmd/obsidian-api#master",
-    "obsidian-calendar-ui": "../obsidian-calendar-ui",
-    "obsidian-daily-notes-interface": "0.9.0",
-    "semver": "^7.3.5",
-    "svelte": "3.35.0",
-    "tslib": "2.1.0"
+    "obsidian-calendar-ui": "0.4.0",
+    "obsidian-daily-notes-interface": "0.9.2",
+    "semver": "7.3.5",
+    "svelte": "3.37.0",
+    "tslib": "2.2.0"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "17.1.0",
-    "@rollup/plugin-node-resolve": "11.1.1",
+    "@rollup/plugin-commonjs": "18.0.0",
+    "@rollup/plugin-node-resolve": "11.2.1",
     "@rollup/plugin-replace": "2.4.2",
-    "@rollup/plugin-typescript": "8.1.1",
+    "@rollup/plugin-typescript": "8.2.1",
     "@tsconfig/svelte": "1.0.10",
     "@types/moment": "2.13.0",
-    "@types/semver": "^7.3.4",
-    "@typescript-eslint/eslint-plugin": "4.15.0",
-    "@typescript-eslint/parser": "4.15.0",
-    "eslint": "7.19.0",
+    "@types/semver": "7.3.4",
+    "@typescript-eslint/eslint-plugin": "4.21.0",
+    "@typescript-eslint/parser": "4.21.0",
+    "eslint": "7.24.0",
     "moment": "2.29.1",
-    "rollup": "2.38.5",
+    "rollup": "2.45.1",
     "rollup-plugin-svelte": "7.1.0",
     "svelte-check": "1.4.0",
-    "svelte-dnd-action": "0.9.4",
-    "svelte-preprocess": "4.6.8",
-    "typescript": "4.1.5"
+    "svelte-dnd-action": "0.9.5",
+    "svelte-preprocess": "4.7.0",
+    "typescript": "4.2.4"
   },
   "resolutions": {
-    "svelte": "3.35.0"
+    "svelte": "3.37.0"
   }
 }
