--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "@popperjs/svelte": "0.1.1",
     "obsidian": "obsidianmd/obsidian-api#master",
-    "obsidian-calendar-ui": "0.4.0",
+    "obsidian-calendar-ui": "liamcain/obsidian-calendar-ui#c275987d032377bb141747da0f9db2c5cde2df03",
     "obsidian-daily-notes-interface": "0.9.2",
     "semver": "7.3.5",
     "svelte": "3.37.0",
