--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-  "id": "calendar-beta",
-  "name": "Calendar (Beta)",
+  "id": "calendar",
+  "name": "Calendar",
   "description": "Calendar view of your daily notes",
   "version": "2.0.0",
   "author": "Liam Cain",
   "authorUrl": "https://github.com/liamcain/",
   "isDesktopOnly": false,
-  "minAppVersion": "0.9.11"
+  "minAppVersion": "0.10.11"
 }
