--- a/package.json
+++ b/package.json
@@ -15,10 +15,9 @@
   "dependencies": {
     "@popperjs/core": "2.11.5",
     "obsidian": "0.14.6",
-    "obsidian-calendar-ui": "link:../obsidian-calendar-ui",
+    "obsidian-calendar-ui": "file:../obsidian-calendar-ui",
     "obsidian-daily-notes-interface": "0.9.4",
     "semver": "7.3.7",
-    "svelte": "3.48.0",
     "tslib": "2.4.0"
   },
   "devDependencies": {
@@ -35,6 +34,7 @@
     "eslint": "7.24.0",
     "sass": "^1.50.0",
     "standard-version": "^9.3.2",
+    "svelte": "3.48.0",
     "svelte-check": "2.7.0",
     "svelte-dnd-action": "0.9.18",
     "svelte-popperjs": "1.2.9",
