Add funding URL

--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,7 @@
   "version": "1.5.10",
   "author": "Liam Cain",
   "authorUrl": "https://github.com/liamcain/",
+  "fundingUrl": "https://www.buymeacoffee.com/liamcain",
   "isDesktopOnly": false,
   "minAppVersion": "0.9.11"
 }
