Add setting to force daily notes to open in the top left pane

--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,10 @@
 {
-  "id": "calendar",
-  "name": "Calendar",
+  "id": "calendar-planow",
+  "name": "Calendar (Planow Remix)",
   "description": "Calendar view of your daily notes",
   "version": "1.5.10",
   "author": "Liam Cain",
-  "authorUrl": "https://github.com/liamcain/",
-  "fundingUrl": "https://www.buymeacoffee.com/liamcain",
+  "authorUrl": "https://github.com/johnplanow/",
   "isDesktopOnly": false,
   "minAppVersion": "0.9.11"
 }
